[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/tree-tools/Nodes/SubNodes/Scripts/option_block.gd" type="Script" id=1]

[node name="option" type="VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 24.0
margin_right = 131.0
margin_bottom = 161.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 5
alignment = 0
script = ExtResource( 1 )
block_to_collapse_path = null

[node name="hbox" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 33.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="id" type="Label" parent="hbox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 7.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "x"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btn_hide" type="Button" parent="hbox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_right = 33.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "H"
flat = false
align = 1

[node name="vbox_line" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 25.0
margin_right = 128.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 2
alignment = 0
_sections_unfolded = [ "Size Flags" ]
__meta__ = {
"__editor_plugin_screen__": "Script",
"__editor_plugin_states__": {
"2D": {
"ofs": Vector2( -125.191, -103.952 ),
"snap_grid": false,
"snap_offset": Vector2( 0, 0 ),
"snap_pixel": false,
"snap_relative": false,
"snap_rotation": false,
"snap_rotation_offset": 0.0,
"snap_rotation_step": 0.261799,
"snap_show_grid": false,
"snap_step": Vector2( 10, 10 ),
"zoom": 1.67018
},
"3D": {
"ambient_light_color": Color( 0.15, 0.15, 0.15, 1 ),
"default_light": true,
"default_srgb": false,
"deflight_rot_x": 0.942478,
"deflight_rot_y": 0.628319,
"fov": 45.0,
"show_grid": true,
"show_origin": true,
"viewport_mode": 1,
"viewports": [ {
"distance": 4.0,
"listener": true,
"pos": Vector3( 0, 0, 0 ),
"use_environment": false,
"use_orthogonal": false,
"x_rot": 0.0,
"y_rot": 0.0
}, {
"distance": 4.0,
"listener": false,
"pos": Vector3( 0, 0, 0 ),
"use_environment": false,
"use_orthogonal": false,
"x_rot": 0.0,
"y_rot": 0.0
}, {
"distance": 4.0,
"listener": false,
"pos": Vector3( 0, 0, 0 ),
"use_environment": false,
"use_orthogonal": false,
"x_rot": 0.0,
"y_rot": 0.0
}, {
"distance": 4.0,
"listener": false,
"pos": Vector3( 0, 0, 0 ),
"use_environment": false,
"use_orthogonal": false,
"x_rot": 0.0,
"y_rot": 0.0
} ],
"zfar": 500.0,
"znear": 0.1
}
},
"__editor_run_settings__": {
"custom_args": "-l $scene",
"run_mode": 0
},
"__editor_show_subtree": true
}

[node name="box_say" type="VBoxContainer" parent="vbox_line" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 2
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="HBoxContainer" type="HBoxContainer" parent="vbox_line/box_say" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 2
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="text" type="LineEdit" parent="vbox_line/box_say/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 2
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="vbox_params" type="VBoxContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 54.0
margin_right = 128.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 2
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="repeat" type="CheckBox" parent="vbox_params" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 72.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Repeat"
flat = false
align = 0

[node name="not_said" type="CheckBox" parent="vbox_params" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 27.0
margin_right = 288.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Choice only, not said"
flat = false
align = 0

[node name="condition_label" type="Label" parent="vbox_params" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 128.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Visible on Condition"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="condition" type="LineEdit" parent="vbox_params" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 46.0
margin_right = 128.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 2
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Size Flags" ]

[node name="spacer" type="Control" parent="vbox_params" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 74.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="HSeparator" type="HSeparator" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 133.0
margin_right = 128.0
margin_bottom = 137.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
_sections_unfolded = [ "Size Flags" ]


